[package]
name = "taoslog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "*", default-features = false }
tracing-actix-web = { version = "*" }
tracing = { version = "*", default-features = false }
tracing-subscriber = { version = "*", default-features = false, features = [
    "fmt",
    "std",
] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
parking_lot = "0.12.3"
snafu = "0.8.4"
flate2 = "1.0.33"
thread-id = "4.2.2"
regex = "1.10.6"
sysinfo = { version = "0.31.3", default-features = false, features = ["disk"] }
flume = "0.11.0"
arrow-schema = "*"
http = "*"

[dev-dependencies]
crossbeam = "0.8.4"
rand = "0.8.5"
